--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ html, body {
   max-width: 1600px;       /* limite para pantallas grandes */
   margin-left: auto;
   margin-right: auto;
-  padding: 1rem;           /* padding general */
+  padding: 0.5rem;           /* padding general */
   background: white;
   border-radius: 0.75rem;  /* esquinas redondeadas */
   box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* sombra suave */
@@ -71,7 +71,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Roboto', sans-serif;
-  background: linear-gradient(to bottom, #979a9c 0%, #98ddb3 50%, #679ed4 100%) !important;
+  background: linear-gradient(to bottom, #979a9ccd 0%, #bdeccec6 50%, #abd9e6a0 100%) !important;
   min-height: 100vh !important;
   color: #1f2937; /* texto gris oscuro */
   margin: 0;
